<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_single_player"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="guilherme.goodhire.SinglePlayer"
    android:background="@drawable/background2">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/holo_orange_light"
        android:weightSum="1"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/layoutAddLetter"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="20dp">


        <Button
            android:text="@string/buttonSaveScore"
            android:layout_width="wrap_content"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:id="@+id/buttonSaveScore"
            android:textColorLink="@android:color/holo_orange_light"
            android:textSize="14sp"
            android:onClick="saveScore"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="10dp" />



        <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:hint="Insert Your Name"
            android:id="@+id/editTextFieldName"
            android:textColorLink="@android:color/holo_orange_dark"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:text="@string/editTextFieldName" />



    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/layoutLetters"
        android:layout_marginTop="300dp">>
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewPointsGameOverNumber"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:textSize="50dp" />

        <TextView
                android:text="@string/textViewPointsWordGameOver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPointsWordGameOver"
                android:layout_weight="1"
                android:textSize="50dp"
                android:layout_marginRight="5dp" />

    </LinearLayout>


    <ImageView
        android:layout_width="180dp"
        android:layout_height="190dp"
        app:srcCompat="@drawable/good_hire_icon_success"
        android:id="@+id/imageViewGameOver"
        android:layout_marginTop="23dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:id="@+id/layoutGameOver"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <TextView
            android:text="@string/textViewGameOverWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textViewGameOverWord"
            android:textSize="40dp"
            android:textColor="#000000"
            android:layout_weight="1"
            android:layout_margin="10dp" />

    </LinearLayout>

    <Button
        android:text="@string/buttonPlayAgain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layoutLetters"
        android:layout_centerHorizontal="true"
        android:id="@+id/buttonPlayAgain"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="35dp"
        android:onClick="startPlayAgain"
        android:textColorLink="@android:color/holo_orange_light"
        android:textSize="22dp"
        android:background="@android:color/holo_orange_light"
        android:textColor="@android:color/background_light" />

</RelativeLayout>
